# simpleRosNode_Detectron2

./: Dockerfile_det  Dockerfile_imgpub  det_entrypoint.sh  imgpub_entry.sh
install/: local_setup.sh  setup.sh
install/detectreon_densepose/lib/detectreon_densepose/: detection
install/detectreon_densepose/share/detectreon_densepose/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/imgpub_pkg/lib/imgpub_pkg/: imgpub
install/imgpub_pkg/share/imgpub_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/detectreon_densepose/: setup.cfg  setup.py
src/detectreon_densepose/detectreon_densepose/: densepose.py
src/imgpub_pkg/: package.xml  setup.cfg  setup.py
src/imgpub_pkg/imgpub_pkg/: imgpub_node.py
