<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imgpub_pkg</name>
  <version>0.0.0</version>
  <description>A publisher used to send images</description>
  <maintainer email="zilin2020@u.northwestern.edu">Zi Lin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>python3-numpy</depend>

  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
